Letra mas chida

--- a/conf.tex
+++ b/conf.tex
@@ -10,8 +10,10 @@ es-tabla
 \usepackage{blindtext}
 \usepackage{multicol}
 
+\usepackage[default]{comfortaa}
 \usepackage[T1]{fontenc}
-\usepackage{cmbright}
+
+
 \usepackage{siunitx}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
 
