--- a/tarea/1/Tarea_1.org
+++ b/tarea/1/Tarea_1.org
@@ -58,7 +58,7 @@ por el tiempo de espera que este siente.
 
 El articulo menciona de Google F1, la implementación de dicha distribución, sin embargo,
 en el momento que se escribió el articulo F1 solo servia para Google y su Google Ads.
-* Durable Distributed Cache<<sec:4>>
+** Durable Distributed Cache<<sec:4>>
 Resumiendo todo el curso de sistemas distribuidos en un apartado ablando sobre el DDC,
 Esta arquitectura es de las que anula o minimiza los fallos de las distribuciones de
 bases de datos que se hablaron anteriormente. Esta ofrece una gran solución que hasta
@@ -70,10 +70,11 @@ distribución ofrece lo siguiente:
 + Distribución geográfica a través de la expansión activa-activa en centros de datos.
 
 Esta distribución resuelve varios problemas, a parte de la mencionadas anteriormente,
-al ser una implementación basada en nube (actualmente NuoDB es una de las empresas que
+al ser una implementación basada en nube (actualmente /NuoDB/ es una de las empresas que
 ofertan esta solución), esta BD cuenta con un tamaño de virtualmente ilimitada,
 con manejo de alta concurrencia y teniendo una latencia mínima.
 
+#+latex: \medskip{}
 
 Hemos visto varios enfoques de distribuciones de bases de datos, muchos de ellos han resuelto
 problemas a lo largo de la historia con un gran éxito. aunque, muchos de estas soluciones no han
