--- a/conf.tex
+++ b/conf.tex
@@ -54,3 +54,12 @@ es-tabla
   bgcolor=custom,
   fontsize=\scriptsize
 }
+
+\setminted[sql]{
+  frame=single,
+  framesep=1mm,
+  baselinestretch=0.5,
+  breaklines=true,
+  bgcolor=custom,
+  fontsize=\scriptsize
+}
