--- a/README.org
+++ b/README.org
@@ -1,11 +1,15 @@
 #+TITLE: Bases de datos Distribuidas
 
 
-* Tareas[1/2]
+* Tareas[2/2]
 
 - [X] Opinión/resumen [[https://drive.google.com/drive/folders/0B4FYUEdc5Wx6UGtMOGZxVVBFMEU?resourcekey=0-RjfJ_MBz1kXU2S8Wu2WmlQ][intro-bdd.pdf (drive)]]
-- [ ] Ejercicio 1 de [[https://drive.google.com/drive/folders/1C4J0JzXjJrCgxz36Giurs9GRh4z9xElW][tema-01.pdf (drive)]]
+- [X] Ejercicio 1 de [[https://drive.google.com/drive/folders/1C4J0JzXjJrCgxz36Giurs9GRh4z9xElW][tema-01.pdf (drive)]]
+
+* Investigar[0/2] (a mano con bibliografía)
+  + [ ] Multibase de datos (1)
+  + [ ] Sistemas de Base de datos federados (1)
 
 
-* TODO Practica 1
-Instalación del sistema operativo (ver manual)
+* Practicas[0/1]
+- [ ] Instalación del sistema operativo (ver manual)
