carpeta template y portada generica

--- a/template/conf.tex
+++ b/template/conf.tex
@@ -5,6 +5,9 @@ es-nodecimaldot,
 es-tabla
 %english
 ]{babel}
+
+\usepackage[nottoc]{tocbibind}
+
 \usepackage[utf8]{inputenc}
 
 \usepackage{blindtext}
