--- a/practicas/1/main_config.tex
+++ b/practicas/1/main_config.tex
@@ -1,6 +1,6 @@
-\input{../../conf.tex}
+\input{../../template/conf.tex}
 
-\graphicspath{ {../../img_common/} {./img}}
+\graphicspath{ {../../template/img_common/} {./img}}
 
 
 \usepackage{subfiles}
