--- a/template/conf.tex
+++ b/template/conf.tex
@@ -58,6 +58,16 @@ es-tabla
   fontsize=\scriptsize
 }
 
+\setminted[shell-session]{
+  frame=single,
+  framesep=1mm,
+  baselinestretch=0.5,
+  breaklines=true,
+  bgcolor=custom,
+  fontsize=\scriptsize
+}
+
+
 \setminted[sql]{
   frame=single,
   framesep=1mm,
