fuente mas comoda

--- a/template/conf.tex
+++ b/template/conf.tex
@@ -13,9 +13,12 @@ es-tabla
 \usepackage{blindtext}
 \usepackage{multicol}
 
-\usepackage[default]{comfortaa}
-\usepackage[T1]{fontenc}
+% \usepackage[default]{comfortaa}
+% \setmainfont{QTBodini}
+% \usepackage[T1]{fontenc}
+\usepackage[black]{merriweather} %% Option 'black' gives heavier bold face
 
+% \setmainfont{QTBodini}
 
 \usepackage{siunitx}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
