creo forma de manejar fecha

--- a/template/portada.tex
+++ b/template/portada.tex
@@ -18,7 +18,7 @@
     \vfil{}
     {\large Semestre\\\textbf{2022--1}}
     \vfill{}
-    {\large Fecha de Entrega\\10 de septiembre de 2021}
+    {\large Fecha de Entrega\\\fechaEntrega{}}
     \vfill{}
     \includegraphics[width=0.1\textwidth]{inge_logo}
 
