--- a/template/main_config.tex
+++ b/template/main_config.tex
@@ -5,6 +5,7 @@
 
 \usepackage{subfiles}
 \usepackage[backend=biber,style=ieee]{biblatex}
-\addbibresource{./main.bib}
+\addbibresource{../../template/main.bib}
 
 \newcommand{\tituloPractica}{Practica 02\\Instalación del software de Oracle}
+\newcommand{\fechaEntrega}{18 de septiembre de 2021}
