añado mas bibliografía

--- a/template/main.bib
+++ b/template/main.bib
@@ -6,6 +6,32 @@ year={2021},
 month={7}
 }
 
+@misc{oraclebd2021,
+title={Tecnologías de Oracle Database},
+url={https://www.oracle.com/mx/database/technologies/},
+journal={Oracle Help Center},
+note = {[Online; Accesado en 18-Septiembre-2021]}
+}
+
+@misc{man:ssh,
+  author={The Linux Programming Interface},
+  title={ssh},
+  url={https://www.man7.org/linux/man-pages/man1/ssh.1.html},
+  month={7},
+  year={2021},
+  note = {[Online; Accesado en 18-Septiembre-2021]}
+}
+
+@misc{man:useradd,
+  author={The Linux Programming Interface},
+  title={useradd},
+  url={https://man7.org/linux/man-pages/man8/useradd.8.html},
+  month={7},
+  year={2021},
+  note = {[Online; Accesado en 18-Septiembre-2021]}
+}
+
+
 @misc{archwiki:domain,
    author = {ArchLinux contributors},
    title = {Domain name resolution},
